# poor-mans-dyndns

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  test_ip.py
pmdd/: cli.py  ip.py  models.py  plumbing.py  porcellain.py
