[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmdd"
description = "Poor man's DynDns"
version = "1"
authors = [
    {name = "Felix Hummel", email = "felix@felixhummel.de"},
]
requires-python = ">=3.9"
dependencies = [
    "click",
    "httpx",
    "pydantic",
    "python-dotenv",
    "structlog",
]

[project.scripts]
pmdd = "pmdd.cli:root"


[project.optional-dependencies]
dev = [
    "bump2version",
    "cython",  # for pycharm debugger extensions
    "ipython",
    "mypy",
    "pip-tools",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "uv",
]


[tool.setuptools]
packages = ["pmdd"]

[tool.ruff]
line-length = 79
